client side update

--- a/client.html
+++ b/client.html
@@ -11,5 +11,10 @@
     <h1>Rap names EPI</h1>
     <p>Please use https://noel-crud.onrender.com </p>
 
+    <input type="text">
+    <button>get</button>
+
+
+    <script src="main.js"></script>
 </body>
 </html>
